--- a/src/main/resources/static/less/menu-cantine.less
+++ b/src/main/resources/static/less/menu-cantine.less
@@ -1,4 +1,5 @@
 
+
 .semaine {
 	display: flex;
 	flex-wrap: wrap;
@@ -6,6 +7,17 @@
 	.jour {
 		border: 1px solid red;
 		flex: auto;
-		min-width: 300px; 
+		width: 15%;
+		min-width: 300px;
+		
+		article.partie {
+			header {
+				height: 1.5em;
+			}
+			article.choix {
+				height: 1em;
+				font-size: 90%;
+			} 
+		}
 	}
 }
