--- a/src/main/resources/static/less/menu-cantine.less
+++ b/src/main/resources/static/less/menu-cantine.less
@@ -1,23 +1,96 @@
 
 
 .semaine {
+	font-size: 80%;
 	display: flex;
 	flex-wrap: wrap;
+	span {
+		display: table;
+		margin: auto;
+	}
+	.vide1, .vide2, .vide3 {
+		display : none;
+	}
 	
-	.jour {
+	article.jour {
 		border: 1px solid red;
 		flex: auto;
-		width: 15%;
+		width: 10%;
 		min-width: 300px;
 		
-		article.partie {
-			header {
-				height: 1.5em;
+		> header > span {
+			font-weight: bold;
+		}
+		
+		article.service {
+			margin-top:0.5em;
+		}
+		
+		ul {
+			padding: 0;
+			margin: 0;
+			
+		}
+		
+		li.partie {
+			margin-top: 1em;
+			font-size: 95%;
+			list-style-type: none;
+			> span {
+				font-weight: bold;
 			}
-			article.choix {
+			span {
 				height: 1em;
-				font-size: 90%;
+				margin-height :0;
+				margin-top:0;
+			}
+			
+			li.choix {
+				
+				margin-top:0.5em;
+				height: 1em;
+				font-size: 100%;
+				list-style-type: none;
 			} 
 		}
 	}
 }
+
+@media (min-width: 1800px) {
+	article.jour.vide1 {
+			display : none;
+		}
+	
+}
+
+@media (min-width: 620px) {
+	article.jour {
+		
+		
+		&.vide1 {
+			display : block;
+		}
+		.vide3 {
+			display : block;
+		}
+	}
+}
+
+@media (min-width: 922px) {
+	article.jour {
+	
+		.vide2 {
+			display : block;
+		}
+	}
+}
+@media (min-width: 1200px) {
+	article.jour {
+		.vide1  {
+			display : block;
+		}
+	}
+}
+
+
+
