--- a/src/main/resources/static/less/menu-cantine.less
+++ b/src/main/resources/static/less/menu-cantine.less
@@ -13,6 +13,9 @@ div#menucantine {
 		span {
 			display: table;
 			margin: auto;
+			> span {
+				display: inline-block;
+			}
 		}
 		.vide1, .vide2, .vide3 {
 			display : none;
